<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Type here" />

    <Button
        android:id="@+id/changeTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change Text" />

    <Button
        android:id="@+id/changeFragmentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change fragment" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>
</LinearLayout>